<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="gAL" Id="{6970ad6a-8c2c-4369-9fec-f533d1fb12ad}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fbAlarm : FB_TcAlarm;	// Creates instance of integrated Alarm FB
	
	Motor_ON_OFF 	AT %Q* : BOOL := FALSE;	// Motor switch	
	// User Input as percentage, Declaration
	Flow_Valve_1_Percentage	: INT;	// Start values
	Level_Valve_1_Percentage: INT;	// From Manual
	Level_Valve_2_Percentage: INT;
	Level_Valve_3_Percentage: INT;
	Motor_speed_Percentage	: INT; // Start speed, ideal: 30-35%
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>